--- a/lab3/src/makefile
+++ b/lab3/src/makefile
@@ -1,5 +1,9 @@
 CC=gcc
 CFLAGS=-I.
+ALL : parallel_min_max sequential_min_max task5
+
+task: task5.c utils.o find_min_max.o utils.h find_min_max.h
+	$(CC) -o task5 find_min_max.o utils.o task5.c $(CFLAGS)
 
 sequential_min_max : utils.o find_min_max.o utils.h find_min_max.h
 	$(CC) -o sequential_min_max find_min_max.o utils.o sequential_min_max.c $(CFLAGS)
